@@ -14,7 +14,7 @@ RSNAMES_C = basic_query.c games.c cocitation.c iterators.c \
 	igraph_strvector.c igraph_trie.c matrix.c \
 	vector.c vector_ptr.c memory.c adjlist.c visitors.c \
 	igraph_grid.c atlas.c topology.c motifs.c progress.c \
-	operators.c interrupt.c
+	operators.c interrupt.c igraph_psumtree.c
 
 RSNAMES_H = memory.h random.h atlas-edges.h
 
