@@ -21,7 +21,8 @@ libigraph_la_SOURCES       = basic_query.c games.c cocitation.c iterators.c \
 			     igraph_strvector.c igraph_trie.c matrix.c \
 			     vector.c vector_ptr.c memory.c adjlist.c \
 			     visitors.c igraph_grid.c atlas.c topology.c \
-			     motifs.c progress.c atlas-edges.h operators.c
+			     motifs.c progress.c atlas-edges.h operators.c \
+			     igraph_psumtree.c
 libigraph_la_CFLAGS        = -O2
 libigraph_la_LDFLAGS       = -no-undefined
 libigraph_la_LIBADD        = -lm $(XML2_LIBS)
